# sparse-net

./: Cargo.toml  Makefile  pkgs.nix  shell.nix
nix/: mars.nix  mars.patch  sources.json
src/: lib.rs
